--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-Utgå från denna version av koden nu.
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -115,7 +113,7 @@ Utgå från denna version av koden nu.
     <p id="response-message"></p>
   </div>
 
-  <audio id="bgMusic" loop autoplay muted>
+  <audio id="bgMusic" loop>
     <source src="https://raw.githubusercontent.com/ABBY-WORLD/FIATLUX/main/fiatlux.mp3" type="audio/mpeg">
   </audio>
 
@@ -127,17 +125,30 @@ Utgå från denna version av koden nu.
     const bgMusic = document.getElementById("bgMusic");
     const audioIcon = document.getElementById("audio-icon");
     const audioPath = document.getElementById("audio-icon-path");
-    let musicMuted = false;
 
-    audioIcon.addEventListener("click", () => {
-      if (musicMuted) {
-        bgMusic.play();
-        audioPath.setAttribute("d", "M3 10v4h4l5 5V5l-5 5H3z");
+    let musicMuted = false;
+    let musicStarted = false;
+
+    // Start music on first click anywhere
+    document.addEventListener("click", () => {
+      if (!musicStarted) {
+        bgMusic.play().catch(err => console.log("Autoplay error:", err));
+        musicStarted = true;
         musicMuted = false;
-      } else {
+        audioPath.setAttribute("d", "M3 10v4h4l5 5V5l-5 5H3z");
+      }
+    });
+
+    // Toggle music only via icon
+    audioIcon.addEventListener("click", (e) => {
+      e.stopPropagation();
+      musicMuted = !musicMuted;
+      if (musicMuted) {
         bgMusic.pause();
         audioPath.setAttribute("d", "M16.5 12c0-1.77-1.02-3.29-2.5-4.03v8.06c1.48-.74 2.5-2.26 2.5-4.03z M19 12c0 2.21-1.2 4.15-3 5.19v-2.17c.61-.55 1-1.35 1-2.22s-.39-1.67-1-2.22V6.81c1.8 1.04 3 2.98 3 5.19z M3 10v4h4l5 5V5l-5 5H3z");
-        musicMuted = true;
+      } else {
+        bgMusic.play();
+        audioPath.setAttribute("d", "M3 10v4h4l5 5V5l-5 5H3z");
       }
     });
 
@@ -208,15 +219,11 @@ Utgå från denna version av koden nu.
 
     setInterval(() => {
       targetFocalLength = targetFocalLength === 3000 ? 1200 : 3000;
-      targetPoints = targetPoints === 400 ? 100 : 400;
+      // targetPoints = targetPoints === 400 ? 100 : 400; // This line is commented out to freeze word count
     }, 6000);
 
     function animateValues() {
       focalLength += (targetFocalLength - focalLength) * 0.02;
-      if (Math.abs(targetPoints - numPoints) > 1) {
-        numPoints += (targetPoints - numPoints) * 0.05;
-        points = generateFibonacciSphere(Math.round(numPoints));
-      }
     }
 
     function draw() {
