--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     });
 
     setInterval(() => {
-      targetFocalLength = targetFocalLength === 3000 ? 1200 : 3000;
-      // targetPoints = targetPoints === 400 ? 100 : 400; // This line is commented out to freeze word count
+      targetFocalLength = targetFocalLength === 3000 ? 300 : 3000;
+      targetPoints = targetPoints === 400 ? 100 : 400; 
     }, 6000);
 
     function animateValues() {
