--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       overflow: hidden;
-      background-color: black;
+      background-color: 1a1a1a;
       font-family: Arial, sans-serif;
     }
     canvas {
