--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
       font-family: Arial, sans-serif;
       z-index: 999;
     }
-  #signup-form-container {
-  top: auto;
-  bottom: 10vh;
-  left: 50%;
-  right: auto;
-  transform: translateX(-50%);
-  text-align: center;
+#signup-form-container {
+  top: 50%;
+  right: 5vw;
+  transform: translateY(-50%);
+  z-index: 999;
 }
     #signup-form {
       background: black;
