--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
       font-family: Arial, sans-serif;
       z-index: 999;
     }
-#signup-form-container {
-  top: 50%;
-  right: 5vw;
-  transform: translateY(-50%);
-  z-index: 999;
-}
+    #signup-form-container {
+      position: fixed;
+      top: 50%;
+      right: 5vw;
+      transform: translateY(-50%);
+      z-index: 999;
+    }
     #signup-form {
       background: black;
       padding: 5px;
@@ -59,7 +60,7 @@
       opacity: 0;
       transition: opacity 1s ease;
       color: white;
-      font-size: 6px;
+      font-size: 10px;
       margin-top: 6px;
       max-width: 180px;
       line-height: 1.4;
