--- a/index.html
+++ b/index.html
@@ -4,147 +4,108 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ABBY.WORLD Cannes 2025</title>
-  <link rel="icon" href="favicon.png" type="image/png" />
   <style>
     @font-face {
-      font-family: 'CustomFont';
-      src: url('YourFontFile.otf') format('opentype');
+      font-family: 'Tiempos';
+      src: url('TiemposText-Regular.otf') format('opentype');
+    }
+    @font-face {
+      font-family: 'Mono';
+      src: url('HelveticaMonospacedPro-Rg.otf') format('opentype');
     }
 
     body {
       margin: 0;
+      padding: 0;
       background-color: #F0EDE6;
-      font-family: 'CustomFont', Arial, sans-serif;
+      font-family: 'Tiempos', serif;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    #top-content {
+      margin-top: 5vh;
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
     }
 
-    #event-info {
-      margin-top: 40px;
-      font-size: 14px;
-      letter-spacing: 1px;
+    #top-content h1 {
+      margin: 0.5em 0;
+      font-size: 1.2rem;
     }
 
-    #title {
-      font-size: 20px;
-      margin: 20px 0;
+    #top-content p {
+      font-family: 'Mono', monospace;
+      font-size: 0.9rem;
+      margin: 0.5em 0;
     }
 
-    #time {
-      font-size: 14px;
-      margin-bottom: 8px;
-    }
-
-    #signup-section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 5px;
+    #signup-form-container {
+      display: inline-block;
+      border: 1px solid black;
+      padding: 5px 10px;
+      margin-top: 0.5em;
     }
 
     #signup-form {
-      background: transparent;
-      border: none;
+      display: flex;
+      align-items: center;
     }
 
     #signup-form input[type="email"] {
+      font-family: 'Mono', monospace;
+      font-size: 0.9rem;
+      background: none;
       border: none;
-      border-bottom: 1px solid black;
-      background: transparent;
-      text-align: center;
-      font-size: 12px;
       outline: none;
-      padding: 5px;
+      text-align: center;
     }
 
-    #submit-button {
-      background: none;
-      border: 1px solid black;
-      padding: 2px 10px;
-      font-size: 12px;
-      cursor: pointer;
-      margin-top: 4px;
+    #signup-form input::placeholder {
+      color: black;
     }
 
     #flower {
-      margin-top: 50px;
-      height: 90px;
+      width: 70px;
+      margin-bottom: 2vh;
     }
 
-    #response-message {
-      font-size: 10px;
-      margin-top: 6px;
-      color: black;
-      opacity: 0;
-      transition: opacity 0.5s ease;
+    @media (max-width: 768px) {
+      #top-content h1 {
+        font-size: 1rem;
+      }
+
+      #top-content p {
+        font-size: 0.8rem;
+      }
+
+      #signup-form-container {
+        margin-top: 1em;
+      }
+
+      #flower {
+        width: 60px;
+      }
     }
   </style>
 </head>
 <body>
-  <div id="event-info">
-    <div>17 &nbsp;&nbsp; 06 &nbsp;&nbsp; 25</div>
-    <div>ABBY.WORLD</div>
-    <div>7 RUE DE LA CALADE</div>
-    <div>CANNES</div>
+
+  <div id="top-content">
+    <p>17&nbsp;&nbsp;&nbsp;&nbsp;06&nbsp;&nbsp;&nbsp;&nbsp;25<br/>ABBY.WORLD<br/>7 RUE DE LA CALADE<br/>CANNES</p>
+    <h1>ABBY.WORLD Cannes 2025</h1>
+    <p>TUESDAY–WEDNESDAY</p>
+
+    <div id="signup-form-container">
+      <form action="https://formspree.io/f/xldjayre" method="POST" id="signup-form">
+        <input type="email" name="email" placeholder="SIGN UP" required />
+      </form>
+    </div>
   </div>
 
-  <div id="title">ABBY.WORLD Cannes 2025</div>
-  <div id="time">2100H–0300H</div>
+  <img id="flower" src="Abby_flower.png" alt="Flower" />
 
-  <div id="signup-section">
-    <form action="https://formspree.io/f/xldjayre" method="POST" id="signup-form">
-      <input type="email" name="email" placeholder="SIGN UP" required />
-      <button type="submit" id="submit-button">SIGN UP</button>
-    </form>
-    <p id="response-message"></p>
-  </div>
-
-  <img src="blomman.png" alt="Flower illustration" id="flower" />
-
-  <script>
-    const form = document.getElementById('signup-form');
-    const responseMsg = document.getElementById('response-message');
-
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const data = new FormData(form);
-
-      fetch(form.action, {
-        method: 'POST',
-        body: data,
-        headers: { 'Accept': 'application/json' }
-      })
-      .then(response => {
-        if (response.ok) {
-          showMessage("THANK YOU");
-          form.reset();
-        } else {
-          response.json().then(data => {
-            if (data.errors) {
-              showMessage(data.errors.map(error => error.message).join(", "));
-            } else {
-              showMessage("ERROR");
-            }
-          });
-        }
-      })
-      .catch(error => {
-        showMessage("ERROR");
-        console.error("Error:", error);
-      });
-    });
-
-    function showMessage(message) {
-      responseMsg.textContent = message;
-      responseMsg.style.opacity = 1;
-      setTimeout(() => {
-        responseMsg.style.opacity = 0;
-      }, 3000);
-    }
-  </script>
 </body>
 </html>
