--- a/index.html
+++ b/index.html
@@ -4,127 +4,165 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ABBY.WORLD Cannes 2025</title>
+  <link rel="icon" href="favicon.png" type="image/png" />
+
+  <!-- Custom Fonts -->
   <style>
     @font-face {
-      font-family: 'Tiempos';
+      font-family: 'TiemposText';
       src: url('TiemposText-Regular.otf') format('opentype');
     }
     @font-face {
-      font-family: 'Mono';
+      font-family: 'HelveticaMono';
       src: url('HelveticaMonospacedPro-Rg.otf') format('opentype');
     }
 
     body {
-      margin: 0;
       background-color: #F0EDE6;
-      font-family: 'Mono', monospace;
-      color: black;
+      margin: 0;
+      padding: 0;
+      font-family: 'HelveticaMono', monospace;
       display: flex;
       flex-direction: column;
+      min-height: 100vh;
       justify-content: space-between;
       align-items: center;
-      min-height: 100vh;
-      padding: 40px 20px;
     }
 
-    .top-section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      line-height: 1.6;
-      font-size: 16px;
+    .top {
+      padding-top: 40px;
+      text-align: center;
+      line-height: 1.2;
     }
 
-    .title {
-      font-family: 'Tiempos', serif;
+    .top .headline {
+      font-family: 'TiemposText', serif;
       font-size: 24px;
-      margin: 40px 0;
-      line-height: 1.4;
+      margin: 40px 0 30px;
     }
 
-    .date {
-      margin-top: 0;
-    }
-
-    .signup-wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .signup-label {
+    .weekday {
       margin-bottom: 10px;
     }
 
-    .signup-line {
+    .form-section {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      font-size: 16px;
+    }
+
+    .dash-line {
+      border-bottom: 2px dashed black;
+      width: 120px;
+    }
+
+    form {
       display: flex;
       align-items: center;
     }
 
-    .dashes {
-      font-size: 24px;
-      letter-spacing: 10px;
-      margin-right: 10px;
-      font-family: 'Mono', monospace;
-    }
-
-    .signup-form {
-      display: inline-block;
-    }
-
-    .signup-form input[type="email"] {
-      font-family: 'Mono', monospace;
-      font-size: 18px;
-      background: black;
-      color: white;
+    input[type="email"] {
+      background-color: transparent;
       border: none;
-      padding: 6px 12px;
-      border-radius: 0;
-      letter-spacing: 2px;
+      outline: none;
+      color: transparent;
+      caret-color: black;
+      width: 0px;
+      padding: 0;
     }
 
-    .signup-form input::placeholder {
+    button {
+      background-color: black;
       color: white;
+      font-family: 'HelveticaMono', monospace;
+      font-size: 16px;
+      padding: 2px 10px;
+      border: none;
+      cursor: pointer;
+      letter-spacing: 1px;
     }
 
-    .legal {
-      font-size: 10px;
-      font-family: 'Mono', monospace;
+    #legal {
       opacity: 0;
-      transition: opacity 1s ease;
-      margin-top: 12px;
+      font-size: 10px;
       max-width: 250px;
-      line-height: 1.5;
       text-align: center;
+      margin-top: 10px;
+      transition: opacity 1s ease;
     }
 
-    .legal a {
+    #legal a {
       color: black;
       text-decoration: underline;
     }
 
     .flower {
-      width: 100px;
-      margin-top: auto;
+      width: 90px;
+      margin-bottom: 20px;
+    }
+
+    @media (max-width: 768px) {
+      .top .headline {
+        font-size: 20px;
+      }
+
+      .form-section {
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .dash-line {
+        width: 100px;
+      }
+
+      .flower {
+        width: 60px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="top-section">
-    <div class="date">17 &nbsp;&nbsp; 06 &nbsp;&nbsp; 25</div>
+  <div class="top">
+    <div>17  06  25</div>
     <div>ABBY.WORLD<br>7 RUE DE LA CALADE<br>CANNES</div>
 
-    <div class="title">ABBY.WORLD Cannes 2025</div>
+    <div class="headline">ABBY.WORLD Cannes 2025</div>
+    <div class="weekday">TUESDAY–WEDNESDAY</div>
 
-    <div class="signup-wrapper">
-      <div class="signup-label">TUESDAY–WEDNESDAY</div>
-      <div class="signup-line">
-        <div class="dashes">_ _ _ _ _</div>
-        <form action="https://formspree.io/f/xldjayre" method="POST" class="signup-form" id="signup-form">
-          <input type="email" name="email" placeholder="SIGN UP" required />
-        </form>
-      </div>
-      <div class="legal" id="signup-legal">
-        By submitting this form, you consent to us processing your personal data to send you information about the event. 
-        We will not keep your data longer than necessary. 
-        <a href="https://docs.google.com/document/d/1Dte-DqgnydV6A6dxK7
+    <div class="form-section">
+      <div class="dash-line"></div>
+      <form action="https://formspree.io/f/xldjayre" method="POST" onsubmit="showLegal(event)">
+        <input type="email" name="email" required>
+        <button type="submit">SIGN UP</button>
+      </form>
+    </div>
+
+    <div id="legal">
+      By submitting this form, you consent to us processing your personal data to send you information about the event.  
+      We will not keep your data longer than necessary.  
+      <a href="https://docs.google.com/document/d/1Dte-DqgnydV6A6dxK7Ldg7Wn774N0YIbEcEmPN4XQq8/edit?usp=sharing" target="_blank">Learn more here</a>.
+    </div>
+  </div>
+
+  <img src="Abby_flower.png" class="flower" alt="Abby Flower" />
+
+  <script>
+    function showLegal(e) {
+      e.preventDefault();
+      const form = e.target;
+      const data = new FormData(form);
+      fetch(form.action, {
+        method: 'POST',
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      }).then(response => {
+        if (response.ok) {
+          document.getElementById('legal').style.opacity = 1;
+          form.reset();
+        }
+      });
+    }
+  </script>
+</body>
+</html>
